asteria/core/tests/errors/elaboration_errors/term_variable_used_as_type_variable.asteriacore
f : forall (a : Type). a -> a
  = \{a} -> \x -> x : x
  ;;
